--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "eslint": "^9.34.0",
+    "globals": "^16.3.0",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "rimraf": "^5.0.10"
